DLCpar Change Log
-----------------------

dlcpar-1.0 (2016/09/28)
-----------------------
- count number of optimal reconciliations
- uniformly sample from optimal reconciliations

dlcpar-0.9.1 (2013/12/11)
-----------------------
- fix installation

dlcpar-0.9 (2013/05/17)
-----------------------
- initial release
